css/application.css
/* ... */
@-webkit-keyframes animStar {
  from {
    transform: translateY(0px); }
  to {
    transform: translateY(-2000px); } }

@keyframes animStar {
  from {
    transform: translateY(0px); }
  to {
    transform: translateY(-2000px); } }

main {
  position: relative;
  z-index: 100; }

.c-accentbox {
  overflow: hidden;
  padding: 32px 0;
  border-radius: 8px;
  background: #F1645D;
  color: #fff; }
  @media screen and (min-width: 767px) {
    .c-accentbox {
      padding: 64px 0; } }

.c-user {
  padding: 32px;
  background: #F5F6FA;
  text-align: center; }
  .c-user__avatar {
    max-width: 125px;
    border-radius: 250px; }
  .c-user__subtitle {
    margin-top: 4px;
    color: #6C7992;
    font-size: 1.8rem; }

.c-whisperbox {
  padding: 32px 0;
  border-radius: 8px;
  background-color: #F5F6FA;
  background-position: bottom center;
  background-repeat: no-repeat;
  background-size: 75%;
  transition: background-size .5s;
  transition-delay: .6s; }
  @media screen and (min-width: 767px) {
    .c-whisperbox {
      padding: 64px 0;
      background-image: url(../images/circles-background.jpg); } }
  .c-whisperbox.is-active {
    background-size: 150%; }

.c-ghostbox {
  padding: 32px 0;
  border-radius: 8px;
  background: #F7A29E; }
  @media screen and (min-width: 767px) {
    .c-ghostbox {
      padding: 64px 0; } }

.o-header__container {
  padding: 16px 0; }

.o-header__top {
  align-items: center;
  display: flex;
  justify-content: space-between; }
  .o-header__top--clone {
    padding: 8px 16px;
    position: fixed;
    z-index: 100;
    top: 0;
    left: 0;
    width: 100%;
    background: #041A39;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
    transform: translateY(-100%);
    transition: all 300ms ease-in-out; }
    .o-header__top--clone .o-navigation__item,
    .o-header__top--clone .o-navigation__item.is-active {
      color: #fff; }
    .o-header__top--clone.is-sticky {
      transform: translateY(0%); }

.o-header__body {
  margin-top: 64px;
  padding-bottom: 128px;
  text-align: center; }

.a-push-top {
  transform: translateY(200px);
  transition: all .5s;
  transition-delay: .5s; }
  .a-push-top.is-active {
    transform: translateY(0); }

.o-teaser {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-wrap: no-wrap;
  justify-content: center; }
  .o-teaser__symbol {
    display: block; }
  .o-teaser__content {
    margin-top: 16px; }

.c-notification {
  padding: 24px;
  background-color: #E6E8EB;
  border-left: 8px solid #F1645D; }
  .c-notification--warning {
    background-color: #fff7d4;
    border-color: #e7c000; }
  .c-notification h3 {
    margin-top: 0; }

/**
 * atom-dark theme for `prism.js`
 * Based on Atom's `atom-dark` theme: https://github.com/atom/atom-dark-syntax
 * @author Joe Gibson (@gibsjose)
 */
code[class*="language-"],
pre[class*="language-"] {
  color: #c5c8c6;
  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
  font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -ms-hyphens: none;
  hyphens: none; }

/* Code blocks */
pre[class*="language-"] {
  padding: 1em;
  margin: .5em 0;
  overflow: auto;
  border-radius: 0.3em; }

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
  background: #1d1f21; }

/* Inline code */
:not(pre) > code[class*="language-"] {
  padding: .1em;
  border-radius: .3em; }

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #7C7C7C; }

.token.punctuation {
  color: #c5c8c6; }

.namespace {
  opacity: .7; }

.token.property,
.token.keyword,
.token.tag {
  color: #96CBFE; }

.token.class-name {
  color: #FFFFB6;
  text-decoration: underline; }

.token.boolean,
.token.constant {
  color: #99CC99; }

.token.symbol,
.token.deleted {
  color: #f92672; }

.token.number {
  color: #FF73FD; }

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: #A8FF60; }

.token.variable {
  color: #C6C5FE; }

.token.operator {
  color: #EDEDED; }

.token.entity {
  color: #FFFFB6;
  cursor: help; }

.token.url {
  color: #96CBFE; }

.language-css .token.string,
.style .token.string {
  color: #87C38A; }

.token.atrule,
.token.attr-value {
  color: #F9EE98; }

.token.function {
  color: #DAD085; }

.token.regex {
  color: #E9C062; }

.token.important {
  color: #fd971f; }

.token.important,
.token.bold {
  font-weight: bold; }

.token.italic {
  font-style: italic; }

.u-text-color-focus {
  color: #F1645D; }

.u-text-color-quiet {
  color: #818C9C; }

.u-text-l {
  font-size: 24px; }

.u-text-uppercase {
  text-transform: uppercase; }

.u-text-strong {
  font-weight: 600; }

